--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,8 @@
       </dependency>
       <dependency>
          <groupId>org.projectlombok</groupId>
-         <artifactId>lombok</artifactId>
+	 <artifactId>lombok</artifactId>
+	 <version>1.18.34</version>
       </dependency>
       <dependency>
          <groupId>io.swagger.core.v3</groupId>
@@ -77,24 +78,6 @@
    </dependencies>
    <build>
       <plugins>
-         <plugin>
-            <groupId>com.spotify</groupId>
-            <artifactId>dockerfile-maven-plugin</artifactId>
-            <version>${dockerfile-maven-plugin.version}</version>
-            <executions>
-               <execution>
-                  <id>default</id>
-                  <goals>
-                     <goal>build</goal>
-                     <goal>push</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <repository>brunomarinholee/api-smiles</repository>
-               <tag>latest</tag>
-            </configuration>
-         </plugin>
          <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
